[tool.poetry]
name = "my-reflex-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "my_reflex_app"}]

[tool.poetry.dependencies]
python = "^3.10"
reflex = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
